update ejemplo4 devcontainer to new common utils feature

--- a/ejemplo-4/.devcontainer/devcontainer.json
+++ b/ejemplo-4/.devcontainer/devcontainer.json
@@ -4,7 +4,11 @@
 		"dockerfile": "Dockerfile"
 	},
 	"overrideCommand": false,
-	
+	"features": {
+		"ghcr.io/devcontainers/features/common-utils:2": {
+			"username": "jovyan"
+		}
+	},
 	// Forward Jupyter port locally, mark required
 	"forwardPorts": [8888],
 	"portsAttributes": {
